--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "gh-pages": "^3.2.3",
     "nuxt": "^2.15.8",
     "nuxt-content": "github:nuxt/content",
+    "p5": "^1.4.1",
+    "sass": "^1.51.0",
     "vue": "^2.6.14",
+    "vue-p5": "^0.8.4",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
